@@ -35,11 +35,11 @@
 
     <properties>
         <awaitility-version>4.2.0</awaitility-version>
-        <lombok-version>1.18.30</lombok-version>
+        <lombok-version>1.18.42</lombok-version>
         <logback-version>1.5.26</logback-version>
         <logcaptor-version>2.2.0</logcaptor-version>
         <junit-version>5.10.2</junit-version>
-        <mockito-version>5.11.0</mockito-version>
+        <mockito-version>5.20.0</mockito-version>
         <apache-commons-codec-version>1.15</apache-commons-codec-version>
         <gson-version>2.13.2</gson-version>
         <commons-lang3-version>3.18.0</commons-lang3-version>
@@ -129,9 +129,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.12.1</version>
                 <configuration>
-                    <source>21</source>
-                    <target>21</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <source>25</source>
+                    <target>25</target>
                     <annotationProcessorPaths>
                         <annotationProcessorPath>
                             <groupId>org.projectlombok</groupId>
@@ -146,7 +145,6 @@
                 <version>3.2.5</version>
                 <configuration>
                     <argLine>-XX:+EnableDynamicAgentLoading</argLine>
-                    <argLine>--enable-preview</argLine>
                 </configuration>
             </plugin>
             <plugin>
@@ -176,20 +174,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.3.2</version>
+                <version>3.12.0</version>
                 <configuration>
                     <doclint>all,-missing</doclint>
-                    <release>21</release>
-                    <additionalOptions>--enable-preview</additionalOptions>
+                    <release>25</release>
+                    <failOnError>true</failOnError>
                 </configuration>
-                <executions>
-                    <execution>
-                        <id>attach-javadocs</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
